[package]
name = "my-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4", features = ["derive", "env"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = {version = "0.12", features = ["json"]}
tokio = {version = "1.0", features = ["full"]}
anyhow = "1"
indicatif = "0.17"

[profile.release]
opt-level = 3
strip = true
lto = true
